tests/baselines/reference/decoratorOnTypeAlias.errors.txt
tests/cases/conformance/decorators/invalid/decoratorOnTypeAlias.ts(3,1): error TS1206: Decorators are not valid here.


==== tests/cases/conformance/decorators/invalid/decoratorOnTypeAlias.ts (1 errors) ====
    declare function dec<T>(target: T): T;
    
    @dec
    ~
!!! error TS1206: Decorators are not valid here.
    type T = number;